--- a/data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg
@@ -10,18 +10,18 @@
 
     {DEFAULT_SCHEDULE_MORNING}
 
-    {SCENARIO_MUSIC       elvish-theme.ogg}
+    {SCENARIO_MUSIC       nunc_dimittis.ogg}
     {EXTRA_SCENARIO_MUSIC knolls.ogg}
-    {EXTRA_SCENARIO_MUSIC revelation.ogg}
+    {EXTRA_SCENARIO_MUSIC casualties_of_war.ogg}
 
     [story]
         [part]
-            music=wanderer.ogg
-            story= _ "Fighting tears and rage, Malin follows the back-trail of the orcish band. He curses the elder mages for sending him from the Isle of Alduin half-prepared, only to be thrust into conflict. He curses Drogan for lacking the courage to see what must be done. Most fiercely, he curses the orcs for ravaging his family and home through their ceaseless attacks."
+            music=the_king_is_dead.ogg
+            story= _ "Bitter and alone, Malin follows the back-trail of the orcish band north from Parthyn. He curses the mages for casting him out from the Isle of Alduin only half-trained, unprepared for conflict. He curses Drogan for lacking the resolve to make the necessary sacrifices to protect their home. Most fiercely, he curses the orcs for their mindless savagery, pillagers and raiders who view violence as little more than sport."
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "Three days’ travel outside Parthyn, Malin meets Darken Volk, the same necromancer who had saved Parthyn and taught Malin to raise the dead not long ago. The necromancer takes pity on Malin in his friendless state, and asks Malin to travel with him. As the weeks pass, he teaches Malin more dark magic."
+            story= _ "Three days’ travel northeast, Malin stumbles upon Darken Volk, the necromancer who had saved Parthyn and taught him to raise the dead. The dark mage suggests that they travel together; Malin obliges, having been abandoned by his kinsmen. As the weeks pass, Darken Volk teaches Malin more dark magic."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
     [/story]
@@ -118,32 +118,42 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "In truth, I share your hatred for the orcs. The Northlands have been my... home... for many years, and the orcs have been a growing infestation in them. They despoil the beauty of the land wherever they go. If you are interested, I would be happy to take you on as my apprentice so that you can... aid me in the fight against them."
+            message= _ "In truth, I share your hatred for the orcs. The Northlands have been my home for many years, and the orcs have been a growing infestation in recent times. They despoil the beauty of the land wherever they go, hacking and burning the forests and wildlife with their crude armaments. They are truly nothing but brutish barbarians. If you are interested, I would be happy to take you on as my... apprentice... so that you can aid me in the fight against them."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "Yes! I thirst for revenge on those creatures!"
+            message= _ "Yes! These vile creatures have ruined our lives in more ways than I can name. It is time someone did the same to them. They deserve to suffer for what they have done to us."
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "Who knows? Perhaps removing the threat of orc raids will persuade the people of Parthyn to... welcome you home."
+            message= _ "Perhaps removing the threat of orc raids will persuade the people of Parthyn to welcome you home."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "Perhaps. Even Drogan would have to be thankful for a summer without orc raids."
+            message= _ "They should be grateful. Imagine. No need to rebuild our homes year after year. No more needless deaths, no more senseless bloodshed, no more fear..."
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "A goblin village lies in this valley, just ahead. They are a bastard race born of the orcs, and help them in their wars against humans and dwarves. These do not know of our coming. Subduing them will give us souls upon which to call in our fight against the orcs."
+            message= _ "But first, training. The orcs are powerful in the hills, strong enough that even I dare not confront them directly."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "Then what shall we do?"
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "It will be a worthwhile test of your new skills."
+            message= _ "Strike at them where they are weak. A goblin village lies in this valley, just ahead. They are the bastard children of the orcs, feeble creatures individually, but annoying enough in large numbers. Subduing them will provide us a supply of fresh corpses and souls to use against the orcs."
+        [/message]
+
+        [message]
+            speaker=Darken Volk
+            message= _ "... It will be a worthwhile test of your skills."
         [/message]
     [/event]
 
@@ -280,7 +290,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Ahhh... I did not realize there was a swamp near this village. Malin, I believe it would be beneficial for your training if you and I were to investigate the swamp."
+            message= _ "Ahhh... I did not realize there was a swamp near this village. Malin, it would be beneficial for your training if you and I were to investigate the swamp."
         [/message]
     [/event]
 
@@ -295,7 +305,7 @@
 
         [message]
             speaker=Darken Volk
-            message=_ "Rise, rise from the realms of death and decay!"
+            message=_ "Rise from the realms of death and decay!"
         [/message]
 
         [scroll_to]
@@ -323,12 +333,12 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "What are those things?"
+            message= _ "What are these things?"
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "They are ghouls. Once, they were... evil men... murderers and outlaws. Through magic they have been transformed so their outsides match the spirits within. Those that outlive their masters gravitate towards the swamps and bogs, drawn by the natural decay there."
+            message= _ "They are ghouls: noxious beings fashioned from living flesh into carcasses of disease and poison. Those that outlive their masters gravitate towards the natural decay present in swamps and bogs."
         [/message]
 
         [message]
@@ -338,12 +348,24 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "In their present form they can best serve the greater good. Even now they will aid you in defeating this goblin rabble. Besides, as I said, these were men of great evil. No punishment is too great for their kind."
+            message= _ "You need not pity them. Once, these were... evil men... murderers and outlaws, no better than the orcs you hunt. I have transformed them so their physical forms match the spirits within. Is that not fitting? No punishment is too great for their kind."
         [/message]
 
         [message]
             speaker=Malin Keshar
             message= _ "I suppose so..."
+        [/message]
+    [/event]
+
+    [event]
+        name=die
+        [filter]
+            id=T'shar Lggi
+        [/filter]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "The goblin knight is dead, master."
         [/message]
     [/event]
 
@@ -379,17 +401,17 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Sacking goblin villages is all well and good, but walking corpses and bats won’t stand up to full orcish warriors."
+            message= _ "Sacking goblin villages is all well and good, but walking corpses and bats will not stand up to full orcish warriors."
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "Your training is just beginning, Malin. With the souls from these goblins now available for our use, you will see your forces grow quickly."
+            message= _ "Have some patience. We have only just begun your training. These corpses and souls will supply you sufficient resources for practice. When you have mastered the basics, we will then assault the orcs and you will see your forces grow quickly."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "Excellent. I’m eager to move on to the real foes."
+            message= _ "Excellent. I’m eager to move on to some real foes."
         [/message]
 
         [store_villages]
