DiD S4: punctuation fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
@@ -18,7 +18,7 @@
     [story]
         [part]
             music=underground.ogg
-            story= _ "Weeks pass in the cold, bare caverns. There is little light and little food, but Malin’s burning desire for vengeance sustains him through his training. As the grip of black magic grows stronger, so does his control of the undead. He finds it to be a mastery of a different sort than what he learned on the Isle of Alduin. The magic reaches out to him as it never has before; he <i>feels</i> it, the flows of energy, ebony power streaming through his soul. He listens and it speaks back—he senses its will and lets it guide him—he embraces the dark magic as an extension of himself more than a simple tool."
+            story= _ "Weeks pass in the cold, bare caverns. There is little light and little food, but Malin’s burning desire for vengeance sustains him through his training. As the grip of black magic grows stronger, so does his control of the undead. He finds it to be a mastery of a different sort than what he learned on the Isle of Alduin. The magic reaches out to him as it never has before; he <i>feels</i> it, the flows of energy, ebony power streaming through his soul. He listens and it speaks back — he senses its will and lets it guide him — he embraces the dark magic as an extension of himself more than a simple tool."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -189,7 +189,7 @@ end
 
         [message]
             speaker=Darken Volk
-            message= _ "Across this pass lies the eastern edge of the Heart Mountains proper. For their distinctive shape, the orcs call these the ‘Whitefang’ Mountains, which is also the namesake of the dominant clan in this region. They are the very same who... killed your father."
+            message= _ "Across this pass lies the eastern edge of the Heart Mountains proper. For their distinctive shape, the orcs call these the ‘Whitefang’ Mountains, which is also the namesake of the dominant clan in this region. They are the very same whoS killed your father."
         [/message]
 
         [message]
