DiD S5: dialogue fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
@@ -16,7 +16,7 @@
 
     [story]
         [part]
-            story=_ "The cycle of the seasons churns and summer and fall roll around once more. Malin's thoughts turn back to Parthyn frequently, where a year prior, he had still been among family and friends in the rustic little town—when he had still had a place to call home. His forced departure has turned him into a forsaken wanderer, he thinks, but the still burning image of his father being cut down and his home being destroyed is imprinted at the forefront of his mind."
+            story=_ "The cycle of the seasons churns and summer and fall roll around once more. Malin’s thoughts turn back to Parthyn frequently, where a year prior, he had still been among family and friends in the rustic little town that he had called home. His forced departure has turned him into a forsaken wanderer, he thinks, but the still burning image of his father being cut down amidst the ruins of his home is imprinted at the forefront of his mind."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -380,7 +380,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Your apprenticeship is nearly over; you are more than capable of handling a single, half-dead orc on your own. After, I do have a small favor I will ask of you. It will constitute the last part of your... training. I have some other things that I must attend to in prepartion. In a few weeks, meet with me to the west, near the town of Tath. For now, hunt down the last chieftain and bring him to... justice."
+            message= _ "Your apprenticeship is nearly over; you are more than capable of handling a single, half-dead orc on your own. After, I do have a small favor I will ask of you. It will constitute the last part of your... training. I have some other things that I must attend to in prepartion. In a few weeks, meet with me to the west, near the town of Tath. For now, hunt down the last chieftain."
         [/message]
 
         [endlevel]
