DiD S6: punctuation/typo fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -17,7 +17,7 @@
     [story]
         [part]
             music=northerners.ogg
-            story= _ "Two days travel south of the previous battle, Malin picks up the trail of the regrouped orcish warriors. He follows them down the western bank of the river Listra, past the Whitefang Mountains. He wonders why they continue rushing toward the Great River instead of calling for reinforcements, but after a bit of thought, he realizes where the orcs are headed. It is, after all, the season when they usually raid human towns."
+            story= _ "Two days’ travel south of the previous battle, Malin picks up the trail of the regrouped orcish warriors. He follows them down the western bank of the river Listra, past the Whitefang Mountains. He wonders why they continue rushing toward the Great River instead of calling for reinforcements, but after a bit of thought, he realizes where the orcs are headed. It is, after all, the season when they usually raid human towns."
             {STORYTXT_BACKGROUND parthyn.jpg}
         [/part]
         [part]
@@ -345,7 +345,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "<i>If I want the people of Parthyn to accept me back, I must be cautious. I must not harm any of them besides Drogan, or they will surely out me for good.</i>"
+            message= _ "<i>If I want the people of Parthyn to accept me back, I must be cautious. I must not harm any of them besides Drogan, or they will surely oust me for good.</i>"
         [/message]
     [/event]
 
@@ -489,8 +489,8 @@
 
                 [message]
                     speaker=unit
-                    message= _ "I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin's powers!"
-                    female_message= _ "female^I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin's powers!"
+                    message= _ "I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin’s powers!"
+                    female_message= _ "female^I joined Malin of my own free will! Drogan was evil and the orcs would have overrun us if not for Malin’s powers!"
                 [/message]
 
                 [message]
@@ -550,7 +550,7 @@
 
                 [message]
                     speaker=Malin Keshar
-                    message= _ "What! You ungrateful cur! You would sack the city and let all of our people die, and for what? Only to spurn something you do not understand? You are a fool. Parthyn will only be under greater danger with you leading it. If the town is to survive, <i>you</i> are the one who must leave!"
+                    message= _ "What?! You ungrateful cur! You would sack the city and let all of our people die, and for what? Only to spurn something you do not understand? You are a fool. Parthyn will only be under greater danger with you leading it. If the town is to survive, <i>you</i> are the one who must leave!"
                 [/message]
 
                 [message]
