DiD S7: modified dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -89,7 +89,7 @@
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story= _ "<i>“No, no. Even if there were another way, they would have spurned me all the same. They are wrong... blind. I have no regrets about what I did. No regrets...”</i> He quells the voice. Sleep comes, long stretches of dreamless darkness punctuated briefly by nightmarish forms, distorted, grotesque things that whisper in eerily familiar voices. <i>‘You are cursed, Malin the Damned! Cursed! Cursed. Cursed...’</i> They echo over and over, first a choir of voices, then a duet, both male, then just one. One voice alone in the darkness."
+            story= _ "<i>“No, no. Even if there were another way, they would have spurned me all the same. They are wrong... blind. I have no regrets about what I did. No regrets...”</i> He quells the voice. Sleep comes, long stretches of dreamless darkness punctuated briefly by nightmarish forms — distorted, grotesque things that whisper in eerily familiar voices. <i>‘You are cursed, Malin the Damned! Cursed! Cursed. Cursed...’</i> They echo over and over, first a choir, then a duet, both male, then just one. One voice alone in the darkness."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
@@ -121,7 +121,7 @@
         team_name=intruders
         user_team_name= _ "Intruders"
         {FLAG_VARIANT undead}
-        
+
         village_gold=2
         village_support=1
 
@@ -495,13 +495,13 @@
             speaker=unit
             message= _ "This blasted fog is so thick! I can’t see a thing!"
         [/message]
-        
+
         [message]
             speaker=Taylor
             message= _ "Stay alert, soldier. Report anything unusual immediately."
         [/message]
     [/event]
-    
+
     [event]
         name=sighted
         [filter]
@@ -561,6 +561,7 @@
 
         [message]
             speaker=unit
+            # po: Ooouuuh is a cry of pain
             message= _ "Ooouuuh! It burns... burrrrnnns..."  # wmllint: no spellcheck
         [/message]
 
@@ -589,7 +590,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "That was the impact of what is known as holy water among common people. It is brewed in a complicated and mysterious procedure only known to a few priests. As you might imagine, it is quite effective against undead."
+            message= _ "That was the impact of what is known as holy water among commoners. It is brewed in a complicated procedure only known to a few priests. As you might imagine, it is quite effective against undead."
         [/message]
     [/event]
 
@@ -652,7 +653,7 @@
 
     [event]
         name=victory
-        
+
         {SET_GOT_INSIDE_MANOR}
 #ifdef EASY
         [set_variable]
