DiD S8: dialogue revision

--- a/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
@@ -827,14 +827,15 @@ Leaving only bones to remain.</i>"
 
         [message]
             speaker=Darken Volk
-            message= _ "I feel the breaking of an illusion spell. The book is in the great hall, in the northwest corner of the manor. Let us move quickly!"
+            # po: a vault is a big underground room, sort of like a gigantic basement
+            message= _ "I feel the breaking of an illusion spell. The book is in the vault in the northwest corner of the manor. We need to find the passageway leading there!"
         [/message]
 
         [objectives]
             side=1
             [objective]
                 condition=win
-                description= _ "Move Malin Keshar or Darken Volk through the passageway in the northwest leading to the great hall"
+                description= _ "Move Malin Keshar or Darken Volk through the passageway in the northwest leading to the vault"
             [/objective]
             [objective]
                 condition=lose
@@ -858,7 +859,7 @@ Leaving only bones to remain.</i>"
 
         [message]
             speaker=unit
-            message=_ "I found the passage to the great hall!"
+            message=_ "I found the passage to the vault!"
         [/message]
 
         [endlevel]
@@ -908,7 +909,7 @@ Leaving only bones to remain.</i>"
 
                 [message]
                     speaker=RGuard
-                    message= _ "Surround those necromancers! They cannot escape us now!"
+                    message= _ "Surround those necromancers! They cannot escape now!"
                 [/message]
                 [message]
                     speaker=Darken Volk
@@ -937,11 +938,11 @@ Leaving only bones to remain.</i>"
 
                 [message]
                     speaker=RGuard
-                    message= _ "Surround those necromancers! They cannot escape us now!"
+                    message= _ "Surround those necromancers! They cannot escape now!"
                 [/message]
                 [message]
                     speaker=Darken Volk
-                    message= _ "Fool boy! You took too long to find the path to the great hall! Now we are at the mercy of the city guards!"
+                    message= _ "Fool boy! You took too long to find the path to the vault! Now we are at the mercy of the city guards!"
                 [/message]
             [/else]
         [/if]
