DiD S9: dialogue update

--- a/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
@@ -765,7 +765,7 @@
         [/filter]
         [message]
             speaker=narrator
-            message= _ "<i>Beware that, when fighting monsters, you yourself do not become a monster... for when you gaze long into the abyss, the abyss gazes also into you.</i>"
+            message= _ "<i>Beware that, when fighting monsters, you yourself do not become a monster...</i>"
             image=wesnoth-icon.png
         [/message]
         [allow_undo][/allow_undo]
@@ -978,7 +978,7 @@ Existence churns and the soul is reborn into endless night.</i>"
 
             [message]
                 speaker=Malin Keshar
-                message= _ "We’ve got the book, but now how do we get out of here?"
+                message= _ "We’ve got the book, but how do we get out of here?"
             [/message]
 
             [scroll_to_unit]
@@ -1064,7 +1064,7 @@ Existence churns and the soul is reborn into endless night.</i>"
 
         [message]
             speaker=RGuard
-            message= _ "Surround those necromancers! They cannot escape us now!"
+            message= _ "Surround those necromancers! They cannot escape now!"
         [/message]
 
         [endlevel]
