[Fwd-port] Apply latest changes to Xcode project from 1.14 branch
Commits included:
b677423cdd2a46b5abc1a8cdb21b79f9cde968ba
662da36ac5cee6c9786b83413daf9524979be5b0
d3eebd61e14efb00754f49bcefd962ab5e24b760
4d08b1eb78955378fbb13537b3f8cfc43450fa92
c03ab2e54c2d2410350dbbd4c6c8ef5fdc92e501

--- a/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/unit_tests.xcscheme
+++ b/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/unit_tests.xcscheme
@@ -17,16 +17,16 @@
                BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
                BuildableName = "unit_tests"
                BlueprintName = "unit_tests"
-               ReferencedContainer = "container:Wesnoth.xcodeproj">
+               ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
       <MacroExpansion>
@@ -35,27 +35,31 @@
             BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
             BuildableName = "unit_tests"
             BlueprintName = "unit_tests"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
       customWorkingDirectory = "$BUILT_PRODUCTS_DIR/Wesnoth.app/Contents/Resources"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "NO"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
             BuildableName = "unit_tests"
             BlueprintName = "unit_tests"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <EnvironmentVariables>
@@ -79,17 +83,19 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release">
-      <BuildableProductRunnable>
+      debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
             BuildableName = "unit_tests"
             BlueprintName = "unit_tests"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
